[package]
name = "josev-binding"
version = "0.0.1"
edition = "2021"
authors = ["Hugo Mercier <hugo.mercier@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
time = { version = "^0.3.30", features = ["formatting", "parsing", "serde"] }
serde_json={ version= "1.0"}
typesv4= {path ="../afb-types"}
strum = "0.26"
strum_macros = "0.26"

[lib]
name = "afb_josev"
crate-type = ["cdylib"]
path = "src/libso.rs"